Fix Reading List EG tests in landscape mode.

In landscape, some entries are not visible and tests fail.
Allow to scroll to find them.

Bug: 791945
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I6119ff89528a67a42501988ccd4db19e457d8fe7
Reviewed-on: https://chromium-review.googlesource.com/808785
Commit-Queue: Olivier Robin <olivierrobin@chromium.org>
Reviewed-by: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#521710}
Former-commit-id: f153d7a537920dbcea5ea006005499d2eb87cbf1