ios/chrome/browser/ui/reading_list/reading_list_collection_view_controller.h
@@ -81,6 +81,8 @@ readingListCollectionViewController:
 // Reloads all the data.
 - (void)reloadData;
 
++ (NSString*)accessibilityIdentifier;
+
 @end
 
 #endif  // IOS_CHROME_BROWSER_UI_READING_LIST_READING_LIST_COLLECTION_VIEW_CONTROLLER_H_
