ios/chrome/browser/ui/reading_list/reading_list_collection_view_controller.mm
@@ -142,6 +142,10 @@ typedef void (^EntryUpdater)(CollectionViewItem* item);
 
 @synthesize shouldMonitorDataSource = _shouldMonitorDataSource;
 
++ (NSString*)accessibilityIdentifier {
+  return @"ReadingListCollectionView";
+}
+
 #pragma mark lifecycle
 
 - (instancetype)initWithDataSource:(id<ReadingListDataSource>)dataSource
@@ -183,7 +187,8 @@ typedef void (^EntryUpdater)(CollectionViewItem* item);
   [super viewDidLoad];
 
   self.title = l10n_util::GetNSString(IDS_IOS_TOOLS_MENU_READING_LIST);
-
+  self.collectionView.accessibilityIdentifier =
+      [ReadingListCollectionViewController accessibilityIdentifier];
   // Add "Done" button.
   UIBarButtonItem* doneItem = [[UIBarButtonItem alloc]
       initWithTitle:l10n_util::GetNSString(IDS_IOS_READING_LIST_DONE_BUTTON)
